# build-and-link-external-lib-for-zephyr

./: CMakeLists.txt  README.md  go.sh  prj.conf
lib/: CMakeLists.txt
lib/include/: thelib.h
lib/src/: thelib.c
src/: main.c
